--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <div class="item">Item 6</div>
         </div>
       </section>
-      <section id="grid">
+      <div id="grid"></div>
+      <section>
         <h1>GRID</h1>
         <div class="section-2 container">
           <div class="item">Item 1</div>
